namespace Tools.Constants {
    public static class AnimationConstants { // Animation constants to ensure spelling consistency
        public static class FadeInOut {
            public const string FadeToBlack = "FadeToBlack";
            public const string FadeFromBlack = "FadeFromBlack";
        }
        
        public static class WipeInOut {
            public const string WipeToBlack = "WipeToBlack";
            public const string WipeFromBlack = "WipeFromBlack";
        }
        
        public static class InteractionsPopup {
            public const string Show = "Show";
            public const string Hide = "Hide";
        }

        public static class Player {
            public const string Die = "Die";
        }

        public static class Box {
            public const string Grab = "Grab";
            public const string InRange = "Hover";
        }
        
        public static class MainMenu {
            public const string ShowOptions = "Show Options";
            public const string HideOptions = "Show Main";
        }

        public static class SecurityCamera {
            public const string LockedOnPlayer = "Locked On Player";
        }
    }
}